@@ -22,7 +22,9 @@ Versionsänderungen:
 ####Version 2.1.10:    
 
 - Archiv-Seite für /person    
-- Filtern nach Kontakt-Kategorien möglich        
+- Filtern nach Kontakt-Kategorien möglich    
+- Reihenfolge der von Adresse und Telefonnummern für Standardausgabe und format="kompakt" angepasst     
+- Anpassung des Parameters extended=1       
 
 
 ####Version 2.1.9:
